Bug 1116925: queue track adds for getUserMedia and cleanup r=roc