dom/media/webrtc/MediaEngineGonkVideoSource.cpp
@@ -182,7 +182,6 @@ MediaEngineGonkVideoSource::Start(SourceMediaStream* aStream, TrackID aID)
   }
 
   aStream->AddTrack(aID, 0, new VideoSegment());
-  aStream->AdvanceKnownTracksTime(STREAM_TIME_MAX);
 
   ReentrantMonitorAutoEnter sync(mCallbackMonitor);
 
